# datascienceforneuro1

./: README.md  cores_personalizadas.txt  dados.csv  dashboard.py  decision_tree_model.pkl  main.py  pyproject.toml
arquivos/: alzheimer_por_faixa_etaria.csv  oasis_cross-sectional_imputado.csv  populacao_idosos_2024_2040.csv
